# Bloxorz-solver

./: README.md
COPY/: bloxorz
v1/: TODO.txt  algorithm.c  comp  comp.c  main.c  p
v2/: CMakeLists.txt  algorithm.c  glob_var.c  main.c  menu.c
v2/SolvingAlgorithm/: algorithm.c
v2/SolvingAlgorithm/include/: algorithm.h  defs.h  glob_var.h
v22/: algorithm.c  menu.c
v23/: NOTE.txt  menu.c
v23/checkpoints/1/: algorithm.c
v23/checkpoints/2/: algorithm.c  defs.h
v23/checkpoints/3/: algorithm.c  glob_var.c
v23/checkpoints/4/: algorithm.c  glob_var.c  menu.c
v23/checkpoints/5/: algorithm.c  glob_var.c  main.c  menu.c
v23/checkpoints/6/: algorithm.c  (+2 more)
v3/: main.c  menu.c  menu.h
v3/SolvingAlgorithm/: CMakeLists.txt  algorithm.c  glob_var.c
v4/: main.c  menu.c  menu.h
v4/BloxorzAlgorithm/: CMakeLists.txt
v4/BloxorzAlgorithm/Playing/: play_bloxorz.c
v4/BloxorzAlgorithm/Screen/: screen.c
v4/BloxorzAlgorithm/Solving/: algorithm.c
v4/BloxorzAlgorithm/include/: algorithm.h  defs.h
v5/: CMakeLists.txt  Makefile  menu.c  menu.h
v6/: TODO.txt  main.c  menu.c
v6/BloxorzAlgorithm/: CMakeLists.txt
v7/: TODO.txt  menu.c  menu.h
v7/BloxorzAlgorithm/: CMakeLists.txt
v7/COPY/: bloxorz
v8/: CMakeLists.txt  menu.c
v8/BloxorzAlgorithm/: CMakeLists.txt
v8/BloxorzAlgorithm/GlobalVariables/: glob_var.c
v8/BloxorzAlgorithm/Playing/: bottom_play_bloxorz.c  play_bloxorz.c
v8/BloxorzAlgorithm/Screen/: screen.c
v8/BloxorzAlgorithm/Solving/: algorithm.c  bottom_algorithm.c
v8/BloxorzAlgorithm/include/: algorithm.h  defs.h  glob_var.h  screen.h
(+58 files in other folders)
